<resources>
    <string name="app_name">CodeMe</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="register_prompt">Register to CodeMe</string>
    <string name="postedby">Posted By: </string>
    <string name="code_type">Code Type: </string>
    <string name="last_modified">Last modified: </string>
    <string name="sample">Add Code Sample</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_body">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
