<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="52dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogo"
        app:layout_constraintVertical_bias="0.114">

        <EditText
            android:id="@+id/etUser"
            android:layout_width="265dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email"
            android:paddingLeft="16dip"
            android:singleLine="true"
            android:textColor="#282727"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tvPassword"
            android:layout_width="265dp"
            android:layout_height="39dp"
            android:layout_marginStart="77dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="77dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dip"
            android:textColor="#282727"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUser" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="265dp"
            android:layout_height="41dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/form_button"
            android:onClick="triggerRegister"
            android:text="@string/register"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSign"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSign"
            android:layout_width="265dp"
            android:layout_height="39dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/form_button"
            android:onClick="signInAsUser"
            android:text="@string/signin"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="372dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/arrowGuest"
            android:layout_width="19dp"
            android:layout_height="16dp"
            android:layout_marginStart="341dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="1dp"
            android:cropToPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307"
            app:srcCompat="@drawable/arrow"
            />

        <TextView
            android:id="@+id/tvGuest"
            android:layout_width="99dp"
            android:layout_height="17dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="4dp"
            android:text="GUEST SIGN IN"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/arrowGuest"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>