<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/addView"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sample"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:paddingLeft="10dip"
        android:textColor="#282727"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/typeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addView" />

    <EditText
        android:id="@+id/typeText"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="Code Type"
        android:inputType="textPersonName"
        android:paddingLeft="10dip"
        android:textColor="#282727"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/contentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/contentText"
        android:layout_width="0dp"
        android:layout_height="358dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:paddingLeft="5dip"
        android:paddingBottom="0dip"
        android:textColor="#282727"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeText" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="132dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:onClick="addCode"
        android:text="ADD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentText" />

</android.support.constraint.ConstraintLayout>